# MDPilot

./: LICENSE  README.md  setup.cfg
MDPilot/processing/: correlation.py
MDPilot/src/Pilot/: pilot.py
examples/ionic_liquid/: NO3_ideal.lmpdat  NO3_ideal.sdf  README_setup.sh  ethylNH4_ideal.lmpdat  ethylNH4_ideal.sdf  log.lammps  run.in.EXAMPLE  system.in.init  system.in.settings  test.lt
examples/ionic_liquid/1_3_dimethylimidazolium_BF4/: README_setup.sh
examples/ionic_liquid/2_3_Dimethyl_1_octylimidazolium_Triflate/: README.md
examples/ionic_liquid/moltemplate_files/: Data Angles  Data Angles.template  Data Atoms  Data Atoms.template  Data Bonds  Data Bonds.template  Data Boundary.template  Data Dihedrals  Data Dihedrals.template  Data Impropers  Data Impropers.template  Data Masses  Data Masses.template  NO3.lt  ethylNH4.lt  log.lammps  mixture.xyz  run.in.EXAMPLE  system.lt  ttree_assignments.txt  ttree_assignments_static.txt
examples/ionic_liquid/packmol_files/: NO3_ATM.xyz  ethylNH4_ATM.xyz  mixture.inp
examples/lennardjones/: convergence_E.txt  convergence_T.txt  log.lammps  plot.ipynb  system.in
examples/script_gen_test/: mytest.txt  test.py
mdpilot/scripts/: lammps_param_sweep.py  make_param_combos.py
mdpilot/src/: LAMMPS_Job.py  LAMMPS_Project.py  __init__.py
src/: __init__.py  pilot.py
src/PostProcess/: blocking.py  correlation.py
src/ScriptComponents/: EquilibrationScript.py  Geometry.py  LJ.py  NPT_Equilibration.py  NVE_Equilibration.py  NVT_Equilibration.py  Potential.py  Velocities.py  __init__.py
(+56 files in other folders)
