[metadata]
name = mdpilot
version = 0.0.1
author = "Nick Hattrup & Ethan Meitz"
url = "https://github.com/M5-Lab/MDPilot"
description = "Molecular Dynamics (MD) python package for the automation and standardization of constructing and running MD workflows with best practices and reproducibility."
license = "ISC License"
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
	matplotlib >= 3.0
	typer >= 0.4
	numpy >= 1.11
	rich >= 1.0
	scipy >= 1.5
	pandas >= 1.0
	seaborn >= 0.11
	toml >= 0.10.1
    abc >= 3.0

[options.packages.find]
include =
	mdpilot
	mdpilot.*

[options.entry_points]
console_scripts =
	make_param_combos = mdpilot.scripts.make_param_combos:app
	lammps_param_sweep = mdpilot.scripts.lammps_param_sweep:app
	